--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 description: A blog about lorem ipsum dolor sit amet
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: /Web-Development
 url: "http://localhost:3000" # the base hostname & protocol for your site 
 
 # User settings
@@ -14,7 +14,7 @@ gplus_username:  lorem_ipsum
 disqus_username: lorem_ipsum
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 permalink: /:title/
 
