the site description and new line in last post

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "http://localhost:3000" # the base hostname & protocol for your site
 
 # User settings
 username: Web Development
-user_description: Khaled is the researcher of this research
+user_description: Supervised by Prof. James, L. Mayfield
 user_title: Fundementals and essential technologies
 email: karnaout@monmouthcollege.edu
 twitter_username: lorem_ipsum
